--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@google/genai": "^1.31.0",
+    "janus-gateway": "^1.3.3",
     "tailwindcss": "^2.2.19",
     "vue": "^3.5.25",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "webrtc-adapter": "^9.0.3"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
