--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.31.0",
+    "@google/generative-ai": "^0.24.1",
     "janus-gateway": "^1.3.3",
     "tailwindcss": "^2.2.19",
     "vue": "^3.5.25",
