--- a/package.json
+++ b/package.json
@@ -15,11 +15,9 @@
   },
   "dependencies": {
     "@google/genai": "^1.31.0",
-<<<<<<< HEAD
     "@google/generative-ai": "^0.24.1",
-=======
->>>>>>> 2e37d0dc9cfe5f16dd15b2e543bb0c39c47bcafe
     "janus-gateway": "^1.3.3",
+    "openai": "^6.10.0",
     "tailwindcss": "^2.2.19",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3",
